--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+body {
+  background-image: url("https://thumbs.dreamstime.com/z/movie-premiere-concept-clapperboard-popcorn-yellow-background-top-view-space-text-watching-film-cinema-154842369.jpg");
+
+  background-size: cover;
+  /* background-position: center; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.red-paragraph {
+  color: blue;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.centered {
+  text-align: center;
 }
